[project]
name = "astro-api"
version = "0.1.0"
description = "Simple API for timezone, daylight hours, and moon data by lat/lon."
requires-python = ">=3.12"
readme = "README.md"
authors = [{ name = "Mike (Darkflib)" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "python-multipart>=0.0.9",
  "astral>=3.2",
  "timezonefinder>=6.5.0",
  "PyYAML>=6.0.1",
]

[tool.uv]
dev-dependencies = [
  "httpx>=0.27.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.6.8",
  "black>=24.9.0",
  "isort>=5.12.0",
  "pre-commit>=3.4.0",
  "mypy>=1.3.0"
]

[tool.ruff]
line-length = 100
target-version = "py312"
